Adds tool call error responses